[workspace]
resolver = "2"
members = [
   "RsExample",
   "RsExampleUser",
]

[workspace.dependencies]
everestrs = { git = "https://github.com/dorezyuk/everest-framework.git", branch="dima/bazel_split", features=["build_bazel"] }
everestrs-build = { git = "https://github.com/dorezyuk/everest-framework.git", branch="dima/bazel_split" }
